# naskpy

./: .codacy.yml  .flake8  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .readthedocs.yaml  .remarkrc.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  bandit.yaml  package.json  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
docs/: .gitignore  README.md  conf.py  homepage.md  index.rst  requirements.txt
docs/_static/: avatar.ai
docs/source/: conf.py  index.rst
docs/source/_templates/: custom-module-template.rst
naskpy/: __init__.py  download.py  image_processing.py  io.py  main.py  pydantic_helpers.py  strings.py
tests/: __init__.py  test_download.py  test_image_processing.py  test_io.py  test_main.py  test_naskpy.py  test_strings.py
