[tool.poetry]
name = "naskpy"
version = "0.1.1"
description = "Tools, modules and functions that I use regularly while coding in Python"
authors = ["Mehdi Nassim KHODJA <18899702+naskio@users.noreply.github.com>"]
maintainers = ["Mehdi Nassim KHODJA <18899702+naskio@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/naskio/naskpy"
repository = "https://github.com/naskio/naskpy"
documentation = "https://naskpy.readthedocs.io"
keywords = ["Python", "Python3", "library", "utilities"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]
[tool.poetry.urls]
issues = "https://github.com/naskio/naskpy/issues"


[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.1.2"
requests = "^2.26.0"
Pillow = "^9.0.1"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pytest-randomly = "^3.10.1"
Sphinx = "4.4.0"
sphinx-rtd-theme = "1.0.0"
myst-parser = "0.17.0"
# coverage = "^5.5"
# tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
